--- a/M2-Solution/index.html
+++ b/M2-Solution/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <title>Module 2 Solution - Corvida Raven</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="https://shegeeks.github.io/WD-Coursera/M2-Solution/css/style.css">
 </head>
 
 <body>
